--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <html>
 <head>
 	<title>Comedy Music Direction</title>
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
 	<div class="max-width-container">
-		<div class="menu v-light-grey-background">
-			<h1 class="purple">
-				<span class="sans-font bold">Comedy</span><span class="sans-font light">Keys</span>
+		<div class="menu v-light-grey-background flex flex-align-outside">
+			<h1 class="purple inline-block">
+				<span class="sans-font bold">Comedy</span><span class="sans-font extra-light">Keys</span>
 			</h1>
-			<div class="inline-bock sans-font">
-				<a>About</a>
-				<a>Episodes</a>
-				<a>Contact</a>
+			<div class="inline-block align-end">
+				<a class="sans-font" href="#about">About</a>
+				<a class="sans-font" href="#episodes">Episodes</a>
+				<a class="sans-font" href="#contact">Contact</a>
 			</div>
 		</div>
 		<div class="hero-image">
 			<p class="tagline sans-font light purple v-light-grey-background">A podcast for comedy music directors</p>
 		</div>
-		<div class="section purple-background">
-			<h2 class="sans-font med-grey">About</h2>
-			<p class="sans-font med-grey">
-				Comedy Keys is a podcast for those involved in the comedy arts with an interest in music direction.
+		<div class="section v-light-grey-background" id="about">
+			<h2 class="sans-font bold purple">About</h2>
+			<p class="sans-font light dark-grey">
+				Comedy Keys is a podcast for people in the comedy arts with an interest in music direction.
 				Whether you are an experienced music director looking for some new ideas, 
-				you play an instrument but want to get involved in sketch and improv community, 
-				or you love musical improv so much that you decided to learn an instrument to accompany your shows,
+				a musician who wants to get involved in sketch and improv, 
+				or an improviser who decided to learn an instrument to accompany your shows,
 				this podcast is for you!
+			</p>
+			<p class="sans-font light dark-grey">
 				New episodes are released monthly on the first Sunday of the month.
-				We'll have interviews, new techniques, helpful tips, and whatever else you might want to learn as a musician accompanying a show.
+				We'll have interviews, new techniques, helpful tips, and whatever else you might want to learn - just tell us what you want to hear!
 			</p>
 		</div>
-		<div class="section v-light-grey-background">
+		<div class="section purple-background v-light-grey" id="episodes">
 			<h2 class="sans-font">Episodes</h2>
 			<div class="flex flex-align-center">
 				<div class="episode sans-font">
@@ -61,6 +64,8 @@
 					</p>
 				</div>
 			</div>
+		</div>
+		<div class="section dark-grey-background" id="contact">
 		</div>
 	</div>
 </body>
