add contact info and icons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Comedy Music Direction</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<script src="https://use.fontawesome.com/8d0c0ae01d.js"></script>
 </head>
 <body>
 	<div class="max-width-container">
@@ -33,10 +34,10 @@
 				We'll have interviews, new techniques, helpful tips, and whatever else you might want to learn - just tell us what you want to hear!
 			</p>
 		</div>
-		<div class="section purple-background v-light-grey" id="episodes">
-			<h2 class="sans-font">Episodes</h2>
+		<div class="section purple-background" id="episodes">
+			<h2 class="sans-font v-light-grey">Episodes</h2>
 			<div class="flex flex-align-center">
-				<div class="episode sans-font">
+				<div class="episode v-light-grey-background dark-grey sans-font">
 					<h3>Epsiode 1: Introduction and four chords</h3>
 					<p>
 						Talking about the start of this podcast and how to start music directing with a simple but popular four chord song.
@@ -45,7 +46,7 @@
 						improvise a song!
 					</p>
 				</div>
-				<div class="episode sans-font">
+				<div class="episode v-light-grey-background dark-grey sans-font">
 					<h3>Epsiode 2: Vocal warmups</h3>
 					<p class="subtitle italic">with Gwen Coburn</p>
 					<p>
@@ -54,7 +55,7 @@
 						leg up on vocal warmups and vocal health, and how a music director can set their cast up for vocal success in a show.
 					</p>
 				</div>
-				<div class="episode sans-font">
+				<div class="episode v-light-grey-background dark-grey sans-font">
 					<h3>Epsiode 3: Underscoring</h3>
 					<p class="subtitle italic">with Steve Sarro</p>
 					<p>
@@ -65,7 +66,15 @@
 				</div>
 			</div>
 		</div>
-		<div class="section dark-grey-background" id="contact">
+		<div class="section v-light-grey-background sans-font flex flex-align-even" id="contact">
+			<a class="align-center" href="https://www.facebook.com/comedykeys" target="_blank">
+				<i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
+				<span class="block">Facebook</span>
+			</a>
+			<a class="align-center" href="mailto:contact@comedykeys.com">
+				<i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+				<span class="block">Email</span>
+			</a>
 		</div>
 	</div>
 </body>
