set max width, fix images, use embedded players

--- a/index.html
+++ b/index.html
@@ -37,33 +37,9 @@
 		<div class="section purple-background" id="episodes">
 			<h2 class="sans-font v-light-grey">Episodes</h2>
 			<div class="flex flex-align-center">
-				<div class="episode v-light-grey-background dark-grey sans-font">
-					<h3>Epsiode 1: Introduction and four chords</h3>
-					<p>
-						Talking about the start of this podcast and how to start music directing with a simple but popular four chord song.
-						Scott explains the motivation behind the podcast, what you can expect to hear from future episodes, and how he got in to music
-						direction in the first place - with the four chord song. If you can learn just four chords on any instrument, you can
-						improvise a song!
-					</p>
-				</div>
-				<div class="episode v-light-grey-background dark-grey sans-font">
-					<h3>Epsiode 2: Vocal warmups</h3>
-					<p class="subtitle italic">with Gwen Coburn</p>
-					<p>
-						In our first guest interview, we talk with Gwen who has a degree in music pedagogy and is a cast member of 
-						ImprovBoston's Family Show, an entirely improvised musical. Gwen discusses how we as performers can give ourselves a 
-						leg up on vocal warmups and vocal health, and how a music director can set their cast up for vocal success in a show.
-					</p>
-				</div>
-				<div class="episode v-light-grey-background dark-grey sans-font">
-					<h3>Epsiode 3: Underscoring</h3>
-					<p class="subtitle italic">with Steve Sarro</p>
-					<p>
-						Steve is a music director at ImprovBoston and at Art Barn youth theater. In this episode, Steve gives us his favorite 
-						tricks of the trade when it comes to improvised underscoring. Deciding both what to play and when to play can be a daunting task
-						but rewarding when done well!
-					</p>
-				</div>
+				<iframe class="episode" src="https://www.podbean.com/media/player/kq23p-806d7e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/rrz9z-806e2e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/vtpg8-806e6d?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
 			</div>
 		</div>
 		<div class="section v-light-grey-background sans-font flex flex-align-even" id="contact">
