media queries work now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Comedy Music Direction</title>
+	<title>Comedy Keys: Comedy Music Direction Podcast</title>
+	<meta name="viewport" content="width=device-width" />
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script src="https://use.fontawesome.com/8d0c0ae01d.js"></script>
