open graph image for fb and google analytics

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <head>
 	<title>Comedy Keys: Comedy Music Direction Podcast</title>
 	<meta name="viewport" content="width=device-width" />
+	<meta property="og:image" content="http://comedykeys.com/Banner.jpg">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script src="https://use.fontawesome.com/8d0c0ae01d.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111711255-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-111711255-1');
+	</script>
 </head>
 <body>
 	<div class="max-width-container">
