--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Comedy Keys: Comedy Music Direction Podcast</title>
 	<meta name="viewport" content="width=device-width" />
 	<meta property="og:image" content="http://comedykeys.com/Banner.jpg">
+	<link rel="icon" href="./icon.png">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script src="https://use.fontawesome.com/8d0c0ae01d.js"></script>
