add itunes link, download icons

--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
 		<div class="section purple-background" id="episodes">
 			<h2 class="sans-font v-light-grey">Episodes</h2>
 			<div class="flex flex-align-center">
-				<iframe class="episode" src="https://www.podbean.com/media/player/kq23p-806d7e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
-				<iframe class="episode" src="https://www.podbean.com/media/player/rrz9z-806e2e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
-				<iframe class="episode" src="https://www.podbean.com/media/player/vtpg8-806e6d?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=0&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/kq23p-806d7e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=1&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/rrz9z-806e2e?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=1&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/vtpg8-806e6d?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=1&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<a class="episode align-start" href="https://itunes.apple.com/us/podcast/comedy-keys/id1329267072" target="_blank">
+					<span class="itunes-badge"></span>
+				</a>
 			</div>
 		</div>
 		<div class="section v-light-grey-background sans-font flex flex-align-even" id="contact">
