--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 				<i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
 				<span class="block">Facebook</span>
 			</a>
+			<a class="align-center" href="https://www.twitter.com/ComedyKeys" target="_blank">
+				<i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+				<span class="block">Twitter</span>
+			</a>
 			<a class="align-center" href="mailto:contact@comedykeys.com">
 				<i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
 				<span class="block">Email</span>
