--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				this podcast is for you!
 			</p>
 			<p class="sans-font light dark-grey">
-				New episodes are released monthly on the first Sunday of the month.
+				New episodes are released intermittently; follow us on <a href="https://twitter.com/ComedyKeys">twitter</a> or <a href="">facebook</a> for the latest updates.
 				We'll have interviews, new techniques, helpful tips, and whatever else you might want to learn - just tell us what you want to hear!
 			</p>
 		</div>
@@ -58,6 +58,7 @@
 				</iframe>
 				<iframe class="episode" src="https://www.podbean.com/media/player/5bh88-90b74f?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=1&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
 				<iframe class="episode" src="https://www.podbean.com/media/player/9sdj6-96b8b8?from=yiiadmin&skin=1&btn-skin=111&share=1&fonts=Helvetica&auto=0&download=1&rtl=0" height="100" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
+				<iframe class="episode" src="https://www.podbean.com/media/player/wjzr7-9f8175?from=yiiadmin&download=1&version=1&skin=1&btn-skin=111&auto=0&share=1&fonts=Helvetica&download=1&rtl=0" height="122" width="100%" frameborder="0" scrolling="no" data-name="pb-iframe-player"></iframe>
 				<a class="episode align-start" href="https://itunes.apple.com/us/podcast/comedy-keys/id1329267072" target="_blank">
 					<span class="itunes-badge"></span>
 				</a>
